--- a/index.html
+++ b/index.html
@@ -1,31 +1,73 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<!-- Begin MailChimp Signup Form -->
-	<style type="text/css">
-		#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-		/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-	</style>
+	<title>Max Manley - Web Developer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-	<title>Get Your Cards Now!</title>
+	<style>
+	body {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin-top: 5px;
+		background-color: ghostwhite;
+	}
+
+	.seperate {
+		margin: 5px;
+	}
+
+	img {
+		width: 45%;
+		height: 33%;
+	}
+	</style>
 </head>
 <body>
-	<div class="holla">
-			<h1>ERIN'S CARDS ARE COMING</h1>
-<div id="mc_embed_signup">
-<form action="https://youtube.us12.list-manage.com/subscribe/post?u=5076b87fde76fbecd830435cd&amp;id=616ac4b426" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5076b87fde76fbecd830435cd_616ac4b426" tabindex="-1" value=""></div>
-    <div class="clear"><input class="btn btn-warning btn-xl" type="submit" value="Sign Up!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
 
-<!--End mc_embed_signup-->
+	<div class="card text-center seperate" style="width: 45%;">
+		<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
+			<img class="card-img-top" src="FaceBrainMM.png" alt="facebrain">
+		</a>
+		<div class="card-body">
+			<h5 class="card-title">Face Recognition App Built with React.js</h5>
+			<p class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL.</p>
+		</div>
 	</div>
+	<br>
+
+	<div class="card text-center seperate" style="width: 45%;">
+		<a href="https://robofriendsmm.herokuapp.com/index" target="_blank">
+			<img class="card-img-top" src="Robofriends.png" alt="robofriends">
+		</a>
+		<div class="card-body">
+			<h5 class="card-title">Robofriends App Built with React.js</h5>
+			<p class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API.</p>
+		</div>
+	</div>
+	<br>
+
+	<div class="card text-center seperate" style="width: 45%;">
+		<a href="https://max1manley.github.io/tic-tac-toe/" target="_blank">
+			<img class="card-img-top" src="tic-tac-toe.png" alt="tictactoe">
+		</a>
+		<div class="card-body">
+			<h5 class="card-title">Tic-Tac-Toe Game</h5>
+			<p class="card-text">Play tic-tac-toe with a friend. Recognizes winners and ties.</p>
+			</div>
+	</div>
+	<br>
+
+	<div class="card text-center seperate" style="width: 45%;">
+		<a href="https://max1manley.github.io/numberguess/index.html" target="_blank">
+			<img class="card-img-top" src="numberguess.png" alt="Numberguess">
+		</a>
+		<div class="card-body">
+			<h5 class="card-title">Number Guessing Game</h5>
+			<p class="card-text">Try to guess the randomly generated number.</p>
+		</div>
+	</div>
+	<br>
+
+	
 </body>
 </html>
