--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<div class="card text-center seperate" style="width: 45%;">
 		<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
-			<img class="card-img-top" src="FaceBrainMM.png" alt="facebrain">
+			<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
 		</a>
 		<div class="card-body">
 			<h5 class="card-title">Face Recognition App Built with React.js</h5>
@@ -48,7 +48,7 @@
 
 	<div class="card text-center seperate" style="width: 45%;">
 		<a href="https://max1manley.github.io/tic-tac-toe/" target="_blank">
-			<img class="card-img-top" src="tic-tac-toe.png" alt="tictactoe">
+			<img class="card-img-top" src="tic-tac-toe.PNG" alt="tictactoe">
 		</a>
 		<div class="card-body">
 			<h5 class="card-title">Tic-Tac-Toe Game</h5>
