--- a/numberguess/index.html
+++ b/numberguess/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div class="container">
 		<input id="input" type="text" placeholder="You Get 5 Guesses. 1-10">
-		<button id="button">Submit</button>
+		<button id="button" onclick="onit()">Submit</button>
 		<br><h3 onclick="showAnswer()">Click here for correct Answer</h3><br>
 	</div>
 <script type="text/javascript" src="guess.js"></script>
