--- a/numberguess/index.html
+++ b/numberguess/index.html
@@ -24,7 +24,7 @@
 	<div class="container">
 		<input id="input" type="text" placeholder="You Get 5 Guesses. 1-10">
 		<button id="button" onclick="onit()">Submit</button>
-		<br><h3 onclick="showAnswer()">Click here for correct Answer</h3><br>
+		<br><h3 onclick="showAnswer()">Click here for correct Answer</h3>
 	</div>
 <script type="text/javascript" src="guess.js"></script>
 </body>
