--- a/numberguess/index.html
+++ b/numberguess/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
 	<div class="container">
-		<input id="input" type="text" placeholder="You Get 5 Guesses. 1-10">
-		<button id="button" onclick="onit()">Submit</button>
+		<input id="input1" type="text" placeholder="You Get 5 Guesses. 1-10">
+		<button id="button1" onclick="onit()">Submit</button>
 		<br><h3 onclick="showAnswer()">Click here for correct Answer</h3>
 	</div>
 <script type="text/javascript" src="guess.js"></script>
