--- a/ThreeJS/index.html
+++ b/ThreeJS/index.html
@@ -68,7 +68,7 @@
 			//Cube0
 			var geometry0 = new THREE.BoxGeometry( 9.92, 6, 0.1 );
 			var material0 = new THREE.MeshLambertMaterial( {
-				map: new THREE.TextureLoader().load('images/pexels-photo-210186.jpeg')
+				map: new THREE.TextureLoader().load('pexels-photo-210186.jpeg')
 			} );
 			var cube0 = new THREE.Mesh( geometry0, material0 );
 			scene.add( cube0 );
@@ -77,7 +77,7 @@
 			//Cube1
 			var geometry1 = new THREE.BoxGeometry( 11.09, 6, 0.1 );
 			var material1 = new THREE.MeshLambertMaterial( {
-				map: new THREE.TextureLoader().load('images/pexels-photo-248771.jpeg')
+				map: new THREE.TextureLoader().load('pexels-photo-248771.jpeg')
 			} );
 			var cube1 = new THREE.Mesh( geometry1, material1 );
 			scene.add( cube1 );
@@ -95,7 +95,7 @@
 			//Cube3
 			var geometry3 = new THREE.BoxGeometry( 0.1, 6, 11.75 );
 			var material3 = new THREE.MeshLambertMaterial( {
-				map: new THREE.TextureLoader().load('images/pexels-photo-414171.jpeg')
+				map: new THREE.TextureLoader().load('pexels-photo-414171.jpeg')
 			} );
 			var cube3 = new THREE.Mesh( geometry3, material3 );
 			scene.add( cube3 );
@@ -104,7 +104,7 @@
 			//Cube4
 			var geometry4 = new THREE.BoxGeometry( 0.1, 6, 11.37 );
 			var material4 = new THREE.MeshLambertMaterial( {
-				map: new THREE.TextureLoader().load('images/pexels-photo-440731.jpeg')
+				map: new THREE.TextureLoader().load('pexels-photo-440731.jpeg')
 			} );
 			var cube4 = new THREE.Mesh( geometry4, material4 );
 			scene.add( cube4 );		
@@ -113,7 +113,7 @@
 			//Cube5
 			var geometry5 = new THREE.BoxGeometry( 0.1, 6, 9 );
 			var material5 = new THREE.MeshLambertMaterial( {
-				map: new THREE.TextureLoader().load('images/road-sun-rays-path.jpg')
+				map: new THREE.TextureLoader().load('road-sun-rays-path.jpg')
 			} );
 			var cube5 = new THREE.Mesh( geometry5, material5 );
 			scene.add( cube5 );		
@@ -124,7 +124,7 @@
 			//Cube6
 			var geometry6 = new THREE.BoxGeometry( 0.1, 6, 8 );
 			var material6 = new THREE.MeshLambertMaterial( {
-				map: new THREE.TextureLoader().load('images/willian-justen-de-vasconcellos-570005-unsplash.jpg')
+				map: new THREE.TextureLoader().load('willian-justen-de-vasconcellos-570005-unsplash.jpg')
 			} );
 			var cube6 = new THREE.Mesh( geometry6, material6 );
 			scene.add( cube6 );		
@@ -135,7 +135,7 @@
 			//Cube7
 			var geometry7 = new THREE.BoxGeometry( 0.1, 6, 10.68 );
 			var material7 = new THREE.MeshLambertMaterial( {
-				map: new THREE.TextureLoader().load('images/pexels-photo-977736.jpeg')
+				map: new THREE.TextureLoader().load('pexels-photo-977736.jpeg')
 			} );
 			var cube7 = new THREE.Mesh( geometry7, material7 );
 			scene.add( cube7 );		
@@ -146,7 +146,7 @@
 			//Cube8
 			var geometry8 = new THREE.BoxGeometry( 0.1, 6, 9.43 );
 			var material8 = new THREE.MeshLambertMaterial( {
-				map: new THREE.TextureLoader().load('images/pexels-photo-870711.jpeg')
+				map: new THREE.TextureLoader().load('pexels-photo-870711.jpeg')
 			} );
 			var cube8 = new THREE.Mesh( geometry8, material8 );
 			scene.add( cube8 );		
