--- a/index.html
+++ b/index.html
@@ -15,22 +15,33 @@
 	.seperate {
 		margin: 5px;
 	}
-/* 
+
 	img {
 		width: 45%;
 		height: 33%;
-	} */
+	}
 	</style>
 </head>
 <body>
 
 	<div class="card text-center seperate" style="width: 66%;">
 		<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
-			<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
+			<img class="card-img-top" src="FaceBrainMM.png" alt="facebrain">
 		</a>
 		<div class="card-body">
 			<h5 class="card-title">Face Recognition App Built with React.js</h5>
 			<p class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL.</p>
+		</div>
+	</div>
+	<br>
+
+	<div class="card text-center seperate" style="width: 66%;">
+		<a href="max1manley.github.io/ThreeJS" target="_blank">
+			<img class="card-img-top" src="threejs.png" alt="threejs">
+		</a>
+		<div class="card-body">
+			<h5 class="card-title">3D Art Gallery Built with Three.js</h5>
+			<p class="card-text">3D art gallery with music I created using code in Sonic Pi.</p>
 		</div>
 	</div>
 	<br>
@@ -48,7 +59,7 @@
 
 	<div class="card text-center seperate" style="width: 66%;">
 		<a href="https://max1manley.github.io/tic-tac-toe/" target="_blank">
-			<img class="card-img-top" src="tic-tac-toe.PNG" alt="tictactoe">
+			<img class="card-img-top" src="tic-tac-toe.png" alt="tictactoe">
 		</a>
 		<div class="card-body">
 			<h5 class="card-title">Tic-Tac-Toe Game</h5>
