--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<div class="card text-center seperate" style="width: 66%;">
 		<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
-			<img class="card-img-top" src="FaceBrainMM.png" alt="facebrain">
+			<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
 		</a>
 		<div class="card-body">
 			<h5 class="card-title">Face Recognition App Built with React.js</h5>
@@ -37,7 +37,7 @@
 
 	<div class="card text-center seperate" style="width: 66%;">
 		<a href="max1manley.github.io/ThreeJS" target="_blank">
-			<img class="card-img-top" src="threejs.png" alt="threejs">
+			<img class="card-img-top" src="threejs.PNG" alt="threejs">
 		</a>
 		<div class="card-body">
 			<h5 class="card-title">3D Art Gallery Built with Three.js</h5>
