--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 	<div class="card text-center seperate" style="width: 66%;">
 		<a href="https://max1manley.github.io/tic-tac-toe/" target="_blank">
-			<img class="card-img-top" src="tic-tac-toe.png" alt="tictactoe">
+			<img class="card-img-top" src="tic-tac-toe.PNG" alt="tictactoe">
 		</a>
 		<div class="card-body">
 			<h5 class="card-title">Tic-Tac-Toe Game</h5>
