--- a/ThreeJS/index.html
+++ b/ThreeJS/index.html
@@ -32,7 +32,7 @@
 			<source src="4chords.mp3" type="audio/mp3">
 		</audio>
 
-		<div id="directions">Click & drag to spin. Scroll to zoom.</div>
+		<div id="directions">Click & drag to spin. Scroll to zoom. Soundtrack created with Sonic Pi.</div>
 
 		<!-- Import THREE.JS scripts -->
 		<script src="three.js"></script>
