removed android fix

--- a/parallax/index.html
+++ b/parallax/index.html
@@ -22,7 +22,7 @@
 
 		<p>Gifford Pinchot, first Chief of the Forest Service, summed up the mission of the Forest Service: "to provide the greatest amount of good for the greatest amount of people in the long run."</p>
 
-		<div class="parallax-window" data-parallax="scroll" androidFix="false" data-z-index="1" data-image-src="forest-park-walk-trail-21423.jpg"></div>
+		<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="forest-park-walk-trail-21423.jpg"></div>
 
 		<div class="header"><strong>Mission</strong></div>
 
