adding parallax shawnee site to portfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Max Manley - Web Developer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	<style>
+
 	body {
 		display: flex;
 		flex-wrap: wrap;
@@ -20,64 +22,97 @@
 		width: 45%;
 		height: 33%;
 	}
+
+	.links {
+		width: 100%;
+		text-align: center;
+	}
+
 	</style>
+
 </head>
 <body>
-
-	<div class="card text-center seperate" style="width: 66%;">
-		<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
-			<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
-		</a>
-		<div class="card-body">
-			<h5 class="card-title">Face Recognition App Built with React.js</h5>
-			<p class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL.</p>
+		<!-- <div class="links">
+			<ul class="nav justify-content-center">
+			  <li class="nav-item">
+			    <a class="nav-link" href="https://linkedin.com/in/max1manley">LinkedIn</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="https://github.com/max1manley">GitHub</a>
+			  </li>
+			</ul>
 		</div>
-	</div>
-	<br>
+		<br> -->
 
-	<div class="card text-center seperate" style="width: 66%;">
-		<a href="max1manley.github.io/ThreeJS" target="_blank">
-			<img class="card-img-top" src="threejs.PNG" alt="threejs">
-		</a>
-		<div class="card-body">
-			<h5 class="card-title">3D Art Gallery Built with Three.js</h5>
-			<p class="card-text">3D art gallery with music I created using code in Sonic Pi.</p>
-		</div>
-	</div>
-	<br>
 
-	<div class="card text-center seperate" style="width: 66%;">
-		<a href="https://robofriendsmm.herokuapp.com/index" target="_blank">
-			<img class="card-img-top" src="Robofriends.png" alt="robofriends">
-		</a>
-		<div class="card-body">
-			<h5 class="card-title">Robofriends App Built with React.js</h5>
-			<p class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API.</p>
-		</div>
-	</div>
-	<br>
 
-	<div class="card text-center seperate" style="width: 66%;">
-		<a href="https://max1manley.github.io/tic-tac-toe/" target="_blank">
-			<img class="card-img-top" src="tic-tac-toe.PNG" alt="tictactoe">
-		</a>
-		<div class="card-body">
-			<h5 class="card-title">Tic-Tac-Toe Game</h5>
-			<p class="card-text">Play tic-tac-toe with a friend. Recognizes winners and ties.</p>
+		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
+				<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
+			</a>
+			<div class="card-body">
+				<h5 class="card-title">Face Recognition App Built with React.js</h5>
+				<p class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL.</p>
 			</div>
-	</div>
-	<br>
-
-	<div class="card text-center seperate" style="width: 66%;">
-		<a href="https://max1manley.github.io/numberguess/index.html" target="_blank">
-			<img class="card-img-top" src="numberguess.png" alt="Numberguess">
-		</a>
-		<div class="card-body">
-			<h5 class="card-title">Number Guessing Game</h5>
-			<p class="card-text">Try to guess the randomly generated number.</p>
 		</div>
-	</div>
-	<br>
+		<br>
+
+		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://max1manley.github.io/ThreeJS" target="_blank">
+				<img class="card-img-top" src="threejs.PNG" alt="threejs">
+			</a>
+			<div class="card-body">
+				<h5 class="card-title">3D Art Gallery Built with Three.js</h5>
+				<p class="card-text">3D art gallery with music I created using code in Sonic Pi.</p>
+			</div>
+		</div>
+		<br>
+
+			<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://max1manley.github.io/parallax" target="_blank">
+				<img class="card-img-top" src="shawnee.PNG" alt="parallax">
+			</a>
+			<div class="card-body">
+				<h5 class="card-title">Shawnee National Forest info site</h5>
+				<p class="card-text">Informational webpage with parallax effect on desktop using the parallax.js package.</p>
+			</div>
+		</div>
+		<br>
+
+		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://robofriendsmm.herokuapp.com/index" target="_blank">
+				<img class="card-img-top" src="Robofriends.png" alt="robofriends">
+			</a>
+			<div class="card-body">
+				<h5 class="card-title">Robofriends App Built with React.js</h5>
+				<p class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API.</p>
+			</div>
+		</div>
+		<br>
+
+		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://max1manley.github.io/tic-tac-toe/" target="_blank">
+				<img class="card-img-top" src="tic-tac-toe.PNG" alt="tictactoe">
+			</a>
+			<div class="card-body">
+				<h5 class="card-title">Tic-Tac-Toe Game</h5>
+				<p class="card-text">Play tic-tac-toe with a friend. Recognizes winners and ties.</p>
+				</div>
+		</div>
+		<br>
+
+		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://max1manley.github.io/numberguess/index.html" target="_blank">
+				<img class="card-img-top" src="numberguess.png" alt="Numberguess">
+			</a>
+			<div class="card-body">
+				<h5 class="card-title">Number Guessing Game</h5>
+				<p class="card-text">Try to guess the randomly generated number.</p>
+			</div>
+		</div>
+		<br>
+
+	
 
 	
 </body>
