--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</a>
 			<div class="card-body">
 				<h5 class="card-title">Shawnee National Forest info site</h5>
-				<p class="card-text">Informational webpage with parallax effect on desktop using the parallax.js package.</p>
+				<p class="card-text">Informational webpage with parallax effect on desktop using the parallax.js package and jQuery.</p>
 			</div>
 		</div>
 		<br>
