--- a/Compair/index.html
+++ b/Compair/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<div id="c1">
-		<input onchange='c1weatherAsk()' id="c1input" type="text" placeholder="Enter First City">
+		<input onchange='c1weatherAsk()' id="c1input" type="text" placeholder="Enter 1st City">
 
 <!-- 		<ul class="smtext">
 			<li>Temp.</li>
@@ -46,7 +46,7 @@
 	</div>
 
 	<div id="c3">
-		<input onchange='c3weatherAsk()' id="c3input" type="text" placeholder="Enter Second City">
+		<input onchange='c3weatherAsk()' id="c3input" type="text" placeholder="Enter 2nd City">
 		<div class="flexwrap">
 			<div class="smtext"> Temp 
 				<p id="c3temp" class="bgtext"> </p>
@@ -60,7 +60,7 @@
 		</div>
 	</div>
 
-	<!-- <canvas id="canvas" height="610px"></canvas> -->
+	<canvas id="canvas" height="300px"></canvas>
 
 </body>
 <script type="text/javascript" src="script.js"></script>
