--- a/Compair/index.html
+++ b/Compair/index.html
@@ -7,22 +7,19 @@
 </head>
 <body>
 
+
+
 	<div id="c1">
 		<input onchange='c1weatherAsk()' id="c1input" type="text" placeholder="Enter 1st City">
+		
 
-<!-- 		<ul class="smtext">
-			<li>Temp.</li>
-			<li>Humidity</li>
-			<li>Wind</li>
-		</ul>
-
-		<ul>
-			<li id="c1temp"></li>
-			<li id="c1humid"></li>
-			<li id="c1wind"></li>
-		</ul> -->
-
+		<!-- Fix layouts so that everything is laid out evenly -->
 		<div class="flexwrap">
+			<div class="smtext">
+				<p id="c1icon"></p>
+			</div>
+			
+
 			<div class="smtext"> Temp 
 				<p id="c1temp" class="bgtext"> </p>
 			</div>
@@ -39,6 +36,9 @@
 	<div id="c2">
 		<div class="smtext">Difference Of</div>
 		<div class="flexwrap">
+
+			<div></div>
+
 			<div><p id="c2temp"> </p></div>
 			<div><p id="c2humid"> </p></div>
 			<div><p id="c2wind"> </p></div>
@@ -48,6 +48,11 @@
 	<div id="c3">
 		<input onchange='c3weatherAsk()' id="c3input" type="text" placeholder="Enter 2nd City">
 		<div class="flexwrap">
+
+			<div class="smtext">
+				<p id="c3icon"></p>
+			</div>
+
 			<div class="smtext"> Temp 
 				<p id="c3temp" class="bgtext"> </p>
 			</div>
@@ -60,7 +65,7 @@
 		</div>
 	</div>
 
-	<canvas id="canvas" height="300px"></canvas>
+	<!-- <canvas id="canvas" height="300px"></canvas> -->
 
 </body>
 <script type="text/javascript" src="script.js"></script>
