--- a/Compair/index.html
+++ b/Compair/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<div class="header"><strong><font class="blue">Test</font><font class="orange">air</font></strong></div>
+	<div class="header"><strong><font class="blue">FLY</font><font class="orange">air</font></strong></div>
 
 	<div id="c1">
 		<input onchange='c1weatherAsk()' id="c1input" type="text" placeholder="Enter 1st City">
