Adding compair to portfolio

--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
 		<br>
 
 		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://max1manley.github.io/Compair" target="_blank">
+				<img class="card-img-top" src="compair.PNG" alt="Compair">
+			</a>
+			<div class="card-body">
+				<h5 class="card-title">Compair</h5>
+				<p class="card-text">Compare weather conditions between cities. Uses Open Weather Map API for weather data.</p>
+			</div>
+		</div>
+		<br>
+
+		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://max1manley.github.io/ThreeJS" target="_blank">
 				<img class="card-img-top" src="threejs.PNG" alt="threejs">
 			</a>
@@ -100,19 +111,5 @@
 		</div>
 		<br>
 
-		<div class="card text-center seperate" style="width: 66%;">
-			<a href="https://max1manley.github.io/numberguess/index.html" target="_blank">
-				<img class="card-img-top" src="numberguess.png" alt="Numberguess">
-			</a>
-			<div class="card-body">
-				<h5 class="card-title">Number Guessing Game</h5>
-				<p class="card-text">Try to guess the randomly generated number.</p>
-			</div>
-		</div>
-		<br>
-
-	
-
-	
 </body>
 </html>
