added hover effects to img

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 		width: 45%;
 	}
 
+	img:hover {
+		transition: transform .4s;
+		transform: scale(1.1);
+	}
+
 	.links {
 		width: 100%;
 		text-align: center;
