--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		flex-wrap: wrap;
 		justify-content: center;
 		margin-top: 5px;
-		background-color: ghostwhite;
+		background-color: rgb(210, 210, 210);
 	}
 
 	.seperate {
