added contrast to card background

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		background-color: rgb(210, 210, 210);
 	}
 
+	.cardbg {
+		background-color: rgb(235, 235, 235);
+	}
+
 	.seperate {
 		margin: 5px;
 	}
@@ -54,7 +58,7 @@
 			<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
 				<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
 			</a>
-			<div class="card-body">
+			<div class="card-body cardbg">
 				<h5 class="card-title">Face Recognition App Built with React.js</h5>
 				<p class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL.</p>
 			</div>
@@ -65,7 +69,7 @@
 			<a href="https://max1manley.github.io/Compair" target="_blank">
 				<img class="card-img-top" src="compair.PNG" alt="Compair">
 			</a>
-			<div class="card-body">
+			<div class="card-body cardbg">
 				<h5 class="card-title">Compair</h5>
 				<p class="card-text">Compare weather conditions between cities. Uses Open Weather Map API for weather data.</p>
 			</div>
@@ -76,7 +80,7 @@
 			<a href="https://max1manley.github.io/ThreeJS" target="_blank">
 				<img class="card-img-top" src="threejs.PNG" alt="threejs">
 			</a>
-			<div class="card-body">
+			<div class="card-body cardbg">
 				<h5 class="card-title">3D Art Gallery Built with Three.js</h5>
 				<p class="card-text">3D art gallery with music I created using code in Sonic Pi.</p>
 			</div>
@@ -87,7 +91,7 @@
 			<a href="https://max1manley.github.io/parallax" target="_blank">
 				<img class="card-img-top" src="shawnee.PNG" alt="parallax">
 			</a>
-			<div class="card-body">
+			<div class="card-body cardbg">
 				<h5 class="card-title">Shawnee National Forest info site</h5>
 				<p class="card-text">Informational webpage with parallax effect on desktop using the parallax.js package and jQuery.</p>
 			</div>
@@ -98,7 +102,7 @@
 			<a href="https://robofriendsmm.herokuapp.com/index" target="_blank">
 				<img class="card-img-top" src="Robofriends.png" alt="robofriends">
 			</a>
-			<div class="card-body">
+			<div class="card-body cardbg">
 				<h5 class="card-title">Robofriends App Built with React.js</h5>
 				<p class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API.</p>
 			</div>
@@ -109,7 +113,7 @@
 			<a href="https://max1manley.github.io/tic-tac-toe/" target="_blank">
 				<img class="card-img-top" src="tic-tac-toe.PNG" alt="tictactoe">
 			</a>
-			<div class="card-body">
+			<div class="card-body cardbg">
 				<h5 class="card-title">Tic-Tac-Toe Game</h5>
 				<p class="card-text">Play tic-tac-toe with a friend. Recognizes winners and ties.</p>
 				</div>
