--- a/codingchallenge14/index.html
+++ b/codingchallenge14/index.html
@@ -8,89 +8,97 @@
 </head>
 <body>
 
+	<div class="infobar">
+		<div id="time">Time <label id="minutes">00</label>:<label id="seconds">00</label></div>
+		<div id="moves">Move 0</div>
+		<div id="reset">
+			<img onclick="reset()" height=20 width=20 src="http://cdn.onlinewebfonts.com/svg/img_112136.png">
+		</div>
+	</div>
+
 	<div id="playmat">
 
 		<div class="scene">
 			<div class="card" id="100"  onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="1" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="1" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="200" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="2" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="2" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="300" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="3" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="3" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="400" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="4" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="4" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="500" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="5" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="5" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="600" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="6" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="6" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="700" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="7" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="7" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="800" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="8" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="8" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="900" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="9" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="9" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="1000" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="10" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="10" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="1100" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="11" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="11" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
 		<div class="scene">
 			<div class="card" id="1200" onclick="flip(this)">
-				<div class="card__face card__face--front">Front</div>
-				<div id="12" class="card__face card__face--back">Back</div>
+				<div class="card__face card__face--front"></div>
+				<div id="12" class="card__face card__face--back"></div>
 			</div>
 		</div>
 
