--- a/codingchallenge14/index.html
+++ b/codingchallenge14/index.html
@@ -12,7 +12,7 @@
 		<div id="time">Time <label id="minutes">00</label>:<label id="seconds">00</label></div>
 		<div id="moves">Move 0</div>
 		<div id="reset">
-			<img onclick="reset()" height=20 width=20 src="https://cdn.onlinewebfonts.com/svg/img_112136.png">
+			<img onclick="reset()" src="https://cdn.onlinewebfonts.com/svg/img_112136.png">
 		</div>
 	</div>
 
