cleaned code, added memory game removed tictactoe from portfolio

--- a/index.html
+++ b/index.html
@@ -40,20 +40,7 @@
 
 </head>
 <body>
-		<!-- <div class="links">
-			<ul class="nav justify-content-center">
-			  <li class="nav-item">
-			    <a class="nav-link" href="https://linkedin.com/in/max1manley">LinkedIn</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="https://github.com/max1manley">GitHub</a>
-			  </li>
-			</ul>
-		</div>
-		<br> -->
-
-
-
+	
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
 				<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
@@ -87,16 +74,18 @@
 		</div>
 		<br>
 
-			<div class="card text-center seperate" style="width: 66%;">
-			<a href="https://max1manley.github.io/parallax" target="_blank">
-				<img class="card-img-top" src="shawnee.PNG" alt="parallax">
+		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://max1manley.github.io/codingchallenge14/" target="_blank">
+				<img class="card-img-top" src="MemoryGame.PNG" alt="memorygame">
 			</a>
 			<div class="card-body cardbg">
-				<h5 class="card-title">Shawnee National Forest info site</h5>
-				<p class="card-text">Informational webpage with parallax effect on desktop using the parallax.js package and jQuery.</p>
-			</div>
+				<h5 class="card-title">Memory Game</h5>
+				<p class="card-text">Match the randomly sorted cards. Keeps track of time and moves taken.</p>
+				</div>
 		</div>
 		<br>
+
+
 
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://robofriendsmm.herokuapp.com/index" target="_blank">
@@ -110,15 +99,16 @@
 		<br>
 
 		<div class="card text-center seperate" style="width: 66%;">
-			<a href="https://max1manley.github.io/tic-tac-toe/" target="_blank">
-				<img class="card-img-top" src="tic-tac-toe.PNG" alt="tictactoe">
+			<a href="https://max1manley.github.io/parallax" target="_blank">
+				<img class="card-img-top" src="shawnee.PNG" alt="parallax">
 			</a>
 			<div class="card-body cardbg">
-				<h5 class="card-title">Tic-Tac-Toe Game</h5>
-				<p class="card-text">Play tic-tac-toe with a friend. Recognizes winners and ties.</p>
-				</div>
+				<h5 class="card-title">Shawnee National Forest info site</h5>
+				<p class="card-text">Informational webpage with parallax effect on desktop using the parallax.js package and jQuery.</p>
+			</div>
 		</div>
 		<br>
+
 
 </body>
 </html>
