--- a/parallax/index.html
+++ b/parallax/index.html
@@ -12,15 +12,15 @@
 
 		<div class="header"><strong>About Us</strong></div>
 
-		<p>We are a multi-faceted agency that manages and protects 154 national forests and 20 grasslands in 43 states and Puerto Rico. The agency’s mission is to sustain the health, diversity, and productivity of the nation’s forests and grasslands to meet the needs of present and future generations.</p>
+		<p class="lax" data-lax-preset="fadeIn crazy">We are a multi-faceted agency that manages and protects 154 national forests and 20 grasslands in 43 states and Puerto Rico. The agency’s mission is to sustain the health, diversity, and productivity of the nation’s forests and grasslands to meet the needs of present and future generations.</p>
 
-		<p>We have an elite wildland firefighting team and the world’s largest forestry research organization. Our experts provide technical and financial help to state and local government agencies, businesses, private landowners and work government-to-government with tribes to help protect and manage non-federal forest and associated range and watershed lands.</p>
+		<p class="lax" data-lax-preset="fadeIn crazy">We have an elite wildland firefighting team and the world’s largest forestry research organization. Our experts provide technical and financial help to state and local government agencies, businesses, private landowners and work government-to-government with tribes to help protect and manage non-federal forest and associated range and watershed lands.</p>
 
 		<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="pexels-photo-454880.jpeg"></div>
 
-		<p>We augment our work through partnerships with public and private agencies that help us plant trees, improve trails, educate the public, and improve conditions in wildland/urban interfaces and rural areas, just to name a few. Our team also promotes sustainable forest management and biodiversity conservation internationally.</p>
+		<p class="lax" data-lax-preset="fadeIn crazy">We augment our work through partnerships with public and private agencies that help us plant trees, improve trails, educate the public, and improve conditions in wildland/urban interfaces and rural areas, just to name a few. Our team also promotes sustainable forest management and biodiversity conservation internationally.</p>
 
-		<p>Gifford Pinchot, first Chief of the Forest Service, summed up the mission of the Forest Service: "to provide the greatest amount of good for the greatest amount of people in the long run."</p>
+		<p class="lax" data-lax-preset="fadeIn crazy">Gifford Pinchot, first Chief of the Forest Service, summed up the mission of the Forest Service: "to provide the greatest amount of good for the greatest amount of people in the long run."</p>
 
 		<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="forest-park-walk-trail-21423.jpg"></div>
 
@@ -35,5 +35,18 @@
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="parallax.min.js"></script>
+	<script src="./laxxx-master/lib/lax.min.js"></script>
+	<script type="text/javascript">
+		window.onload = function() {
+			lax.setup() // init
+
+			const updateLax = () => {
+				lax.update(window.scrollY)
+				window.requestAnimationFrame(updateLax)
+			}
+
+			window.requestAnimationFrame(updateLax)
+		}
+	</script>
 </body>
 </html>
