more even white space

--- a/parallax/index.html
+++ b/parallax/index.html
@@ -10,33 +10,46 @@
 
 		<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="shawneesign.jpg"></div>
 
-		<div class="header"><strong>About Us</strong></div>
+		<div class="space">
+			<div class="section">
 
-		<p class="lax" data-lax-preset="fadeIn crazy">We are a multi-faceted agency that manages and protects 154 national forests and 20 grasslands in 43 states and Puerto Rico. The agency’s mission is to sustain the health, diversity, and productivity of the nation’s forests and grasslands to meet the needs of present and future generations.</p>
+				<div class="header lax" data-lax-preset="fadeIn"><strong>About Us</strong></div>
 
-		<p class="lax" data-lax-preset="fadeIn crazy">We have an elite wildland firefighting team and the world’s largest forestry research organization. Our experts provide technical and financial help to state and local government agencies, businesses, private landowners and work government-to-government with tribes to help protect and manage non-federal forest and associated range and watershed lands.</p>
+				<p class="lax" data-lax-preset="fadeIn">We are a multi-faceted agency that manages and protects 154 national forests and 20 grasslands in 43 states and Puerto Rico. The agency’s mission is to sustain the health, diversity, and productivity of the nation’s forests and grasslands to meet the needs of present and future generations.</p>
+
+				<p class="lax" data-lax-preset="fadeIn">We have an elite wildland firefighting team and the world’s largest forestry research organization. Our experts provide technical and financial help to state and local government agencies, businesses, private landowners and work government-to-government with tribes to help protect and manage non-federal forest and associated range and watershed lands.</p>
+
+			</div>
+		</div>
 
 		<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="pexels-photo-454880.jpeg"></div>
 
-		<p class="lax" data-lax-preset="fadeIn crazy">We augment our work through partnerships with public and private agencies that help us plant trees, improve trails, educate the public, and improve conditions in wildland/urban interfaces and rural areas, just to name a few. Our team also promotes sustainable forest management and biodiversity conservation internationally.</p>
+		<div class="space">
+			<div class="section">
 
-		<p class="lax" data-lax-preset="fadeIn crazy">Gifford Pinchot, first Chief of the Forest Service, summed up the mission of the Forest Service: "to provide the greatest amount of good for the greatest amount of people in the long run."</p>
+				<p class="lax" data-lax-preset="fadeIn">We augment our work through partnerships with public and private agencies that help us plant trees, improve trails, educate the public, and improve conditions in wildland/urban interfaces and rural areas, just to name a few. Our team also promotes sustainable forest management and biodiversity conservation internationally.</p>
+
+				<p class="lax" data-lax-preset="fadeIn">Gifford Pinchot, first Chief of the Forest Service, summed up the mission of the Forest Service: "to provide the greatest amount of good for the greatest amount of people in the long run."</p>
+
+				<div class="lax" data-lax-preset="faceIn">Send a letter to Smokey Bear, Washington, D.C. 20252</div>
+
+				<!-- <div class="header lax" data-lax-preset="fadeIn"><strong>Mission</strong></div>
+
+				<p class="lax" data-lax-preset="fadeIn">The mission of the USDA Forest Service is to sustain the health, diversity, and productivity of the Nation’s forests and grasslands to meet the needs of present and future generations.</p>
+
+				<div class="header">Send a letter to Smokey Bear, Washington, D.C. 20252</div> -->
+			</div>
+		</div>
 
 		<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="forest-park-walk-trail-21423.jpg"></div>
 
-		<div class="header"><strong>Mission</strong></div>
-
-		<p>The mission of the USDA Forest Service is to sustain the health, diversity, and productivity of the Nation’s forests and grasslands to meet the needs of present and future generations.</p>
-
-		<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="pexels-photo-707915.jpeg"></div>
-
-		<div class="header">Send a letter to Smokey Bear, Washington, D.C. 20252</div>
+		<!-- <div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="pexels-photo-707915.jpeg"></div> -->
 
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="parallax.min.js"></script>
 	<script src="./laxxx-master/lib/lax.min.js"></script>
-	<script type="text/javascript">
+	<script>
 		window.onload = function() {
 			lax.setup() // init
 
